--- a/liveChat/public/index.html
+++ b/liveChat/public/index.html
@@ -5,7 +5,6 @@
     <title>Live Chat</title>
 </head>
 <body>
-
     <div class="users">
         <h3>Users</h3>
         <ul id="user"></ul>
@@ -13,7 +12,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 id="room"></h3>
+            <h3 id="room">Livechat: </h3>
         </div>
         <div class="card-body">
             <ul class="container">
@@ -30,7 +29,7 @@
         </div>
         <form id="form" action="">
             <input id="input" type="text" autocomplete="off">
-            <button class="button">
+            <button id="button">
                 Send
             </button>
         </form>
@@ -41,6 +40,11 @@
         <ul id="roomlist"></ul>
     </div>
     
-    
+    <form action="../../WBoard/public/index.html">
+        <button class="ThisbuttonWB">Menuju WB</button>
+    </form>
+
+    <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
